--- a/ruoyi-admin/src/main/resources/application.yml
+++ b/ruoyi-admin/src/main/resources/application.yml
@@ -119,6 +119,12 @@ swagger:
   # 请求前缀
   pathMapping: /dev-api
 
+# 小程序配置
+ccp:
+  wx:
+    appid: your-appid
+    secret: your-secret
+
 # 防止XSS攻击
 xss:
   # 过滤开关
