--- a/ccp-admin/pom.xml
+++ b/ccp-admin/pom.xml
@@ -2,40 +2,39 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0"
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+    <modelVersion>4.0.0</modelVersion>
     <parent>
         <groupId>com.ruoyi</groupId>
         <artifactId>ruoyi</artifactId>
         <version>3.8.7</version>
     </parent>
-    <modelVersion>4.0.0</modelVersion>
 
+    <groupId>org.ba7lgj</groupId>
     <artifactId>ccp-admin</artifactId>
-    <packaging>jar</packaging>
-    <name>ccp-admin</name>
-    <description>Campus Carpool admin API layer</description>
+
+
+
+
+    <description>
+        后台管理端web服务入口
+    </description>
 
     <dependencies>
+
         <dependency>
-            <groupId>ccp-common</groupId>
-            <artifactId>ccp-common</artifactId>
-            <version>${project.version}</version>
-        </dependency>
-        <dependency>
-            <groupId>ccp-core</groupId>
+            <groupId>org.ba7lgj</groupId>
             <artifactId>ccp-core</artifactId>
-            <version>${project.version}</version>
         </dependency>
         <dependency>
             <groupId>com.ruoyi</groupId>
-            <artifactId>ruoyi-framework</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>com.ruoyi</groupId>
-            <artifactId>ruoyi-system</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-web</artifactId>
+            <artifactId>ruoyi-common</artifactId>
         </dependency>
     </dependencies>
+
+    <properties>
+        <maven.compiler.source>17</maven.compiler.source>
+        <maven.compiler.target>17</maven.compiler.target>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+    </properties>
+
 </project>
