--- a/ccp-common/pom.xml
+++ b/ccp-common/pom.xml
@@ -2,18 +2,30 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0"
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+    <modelVersion>4.0.0</modelVersion>
     <parent>
         <groupId>com.ruoyi</groupId>
         <artifactId>ruoyi</artifactId>
         <version>3.8.7</version>
     </parent>
-    <modelVersion>4.0.0</modelVersion>
 
+    <groupId>org.ba7lgj</groupId>
     <artifactId>ccp-common</artifactId>
-    <packaging>jar</packaging>
-    <name>ccp-common</name>
-    <description>Campus Carpool common definitions</description>
-
     <dependencies>
+
+        <!-- 通用工具-->
+        <dependency>
+            <groupId>com.ruoyi</groupId>
+            <artifactId>ruoyi-common</artifactId>
+        </dependency>
+
     </dependencies>
+
+
+    <properties>
+        <maven.compiler.source>17</maven.compiler.source>
+        <maven.compiler.target>17</maven.compiler.target>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+    </properties>
+
 </project>
